--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Examples for the Container3D framework</h1>
-    <a href="room/index.html">Room</a>
-    <a href="dice/index.html">Dice and rectangle</a>
+    <a href="room/index.html"><h2>Room</h2></a>
+    <a href="dice/index.html"><h2>Dice and rectangle</h2></a>
     
 </body>
 </html>
