--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Container3D-framework</title>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <h1>Examples for the Container3D framework</h1>
-    <a href="room/index.html"><h2>Room</h2></a>
-    <a href="dice/index.html"><h2>Dice and rectangle</h2></a>
+    <h2>Examples for the Container3D framework</h2>
+    <main>
+        <div id="room">
+            <a href="room/index.html"><h1>Room</h1></a>
+        </div>
+        <div id="dice">
+            <a href="dice/index.html"><h1>Dice and rectangle</h1></a>
+        </div>
+    </main>
     
 </body>
 </html>
