--- a/room/index.html
+++ b/room/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Room</title>
 	<link href="../Container3D/style.css" rel="stylesheet" type="text/css"/>
 	<link href="room.css" rel="stylesheet" type="text/css"/>
 	<script src="../Container3D/js/Content.js"></script>
